--- a/templates/index.html
+++ b/templates/index.html
@@ -26,15 +26,22 @@
 
   <div class="container" style='background-color:white;'>
     <div class="row">
-      <div class="col-md-12 jumbotron text-center" style='background-color:rgb(179, 178, 178);'>
-        <h1>Belly Button Biodiversity Dashboard</h1>
-        <p style='font-family:Times New Roman;'>Use the interactive charts below to explore the dataset</p>
+      <div class="col-md-10 text-left" style='background-color:rgb(179, 178, 178);font-family:Times;font-size:10px;'>
+        <h1 class="pt-3 mb-0">Interactive climate Change Dashboard</h1>
+        <p style='font-family:Times New Roman;'>.......</p>        
       </div>
+      <div class="col-md-2 text-left pr-0" style='background-color:rgb(179, 178, 178);'>
+        <div class="pb-0 pt-4 ">
+          <a href="#!" class="btn btn-primary active p-1 d-flex" style="line-height:1px;height:70px;" ><input class="w-100"  Responsive image" type="image" src="static\Image\worldMap_button.png" /></a>
+        </div>       
+      </div>
+
     </div>
     <div class="row">
       <div class="col-md-2 shadow-lg p-4 mb-5 bg-white rounded">
+        
         <div class="well" style="font-weight:bold;">
-          <h5 style="font-weight:bold;">Test Subject ID No.:</h5>
+          <h5 style="font-weight:bold;">Select A Country</h5>
           <select id="selDataset" style="font-weight:bold;"></select>
         </div>
         <div class="panel panel-primary">
