index.html update

--- a/templates/index.html
+++ b/templates/index.html
@@ -32,7 +32,7 @@
       </div>
       <div class="col-md-2 text-left pr-0" style='background-color:rgb(179, 178, 178);'>
         <div class="pb-0 pt-4 ">
-          <a href="#!" class="btn btn-primary active p-1 d-flex" style="line-height:1px;height:70px;" ><input class="w-100"  Responsive image" type="image" src="static\Image\worldMap_button.png" /></a>
+          <a href="#!" class="btn btn-primary active p-1 w-75  d-flex float-right" style="line-height:1px;height:70px;" ><input class="w-100"  Responsive image" type="image" src="static\Image\worldMap_button.png" /></a>
         </div>       
       </div>
 
