--- a/templates/index.html
+++ b/templates/index.html
@@ -10,7 +10,7 @@
   <!--Boot Strap-->
   <!--<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">-->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+  <!--<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>-->
   
    <!-- Leaflet CSS -->
    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.6.0/dist/leaflet.css"
@@ -18,7 +18,7 @@
    crossorigin="" />
 
     <!-- Our CSS -->
-  <link rel="stylesheet" type="text/css" href="static/css/style.css">
+  <link rel="stylesheet" type="text/css" href="../static/css/style.css?version=1">
 
 </head>
 
@@ -28,11 +28,11 @@
     <!--row 1-->
     <div class="row ml-5 mr-5 ">
       <div class="col-xs-10 col-xs-10 col-sm-10 col-md-10 col-lg-9 col-xl-9 text-left" style='background-color:rgb(179, 178, 178);font-family:Times;'>
-        <h1 id ="logo" class="pt-3 mb-0 font-italic">Interactive climate Change Dashboard</h1> 
+        <p class="pt-3 mb-0 font-italic set_font_size">Interactive climate Change Dashboard</p> 
       </div>
       <div class="col-xs-2 col-xs-2 col-sm-2 col-md-2 col-lg-2 col-xl-2 text-left pr-0" style='background-color:rgb(179, 178, 178);'>
         <div class="pt-4">
-          <a href="#!" class="btn btn-primary active p-1 w-75  d-flex float-right float-bottom" style="line-height:1px;height:70px;" ><input class="w-100"  Responsive image" type="image" src="static\Image\worldMap_button.png" /></a>
+          <a href="#!" class="btn btn-primary active p-1 w-75  d-flex float-right float-bottom" style="line-height:1px;height:70px;" ><input class="w-100"  alt="Responsive image" type="image" src="static\Image\worldMap_button.png" /></a>
         </div>       
       </div>
     </div>
