--- a/templates/index.html
+++ b/templates/index.html
@@ -27,7 +27,7 @@
   <div class="container-fluid " style='background-color:white;'>
     <!--row 1-->
     <div class="row ml-5 mr-5 ">
-      <div class="col-xs-10 col-xs-10 col-sm-10 col-md-10 col-lg-9 col-xl-9 text-left" style='background-color:rgb(179, 178, 178);font-family:Times;'>
+      <div class="col-xs-10 col-xs-10 col-sm-10 col-md-10 col-lg-10 col-xl-10 text-left" style='background-color:rgb(179, 178, 178);font-family:Times;'>
         <p class="pt-3 mb-0 font-italic set_font_size">Interactive climate Change Dashboard</p> 
       </div>
       <div class="col-xs-2 col-xs-2 col-sm-2 col-md-2 col-lg-2 col-xl-2 text-left pr-0" style='background-color:rgb(179, 178, 178);'>
@@ -38,31 +38,27 @@
     </div>
     <!--row 2-->
     <div class="row row ml-5 mr-5">
-      <div class="col-2  bg-white rounded">
-        
-        <div class="well" style="font-weight:bold;">
-          <h5 style="font-weight:bold;">Select A Country</h5>
+      <div class="col-2  border border-dark rounded-lg">        
+        <div class="mt-4" style="font-weight:bold;">
+          <h5 style="font-weight:bold;font-size:16px;">Select A Country</h5>
           <select id="selDataset" style="font-weight:bold;"></select>
         </div>
-        <div class="panel panel-primary">
-          <div class="panel-heading">
-            <h3 class="panel-title">Demographic Info</h3>
+        <div class="container-fluid">
+          <div class="row">
+            <div class="col-12 mt-5 p-0">
+              <div class="panel panel-primary">
+                <div class="panel-heading">
+                  <h3 class="panel-title" style="font-weight:bold;font-size:16px;">Demographic Info</h3>
+                </div>
+                <div id="sample-metadata" class="panel-body font-weight-bolder"></div>
+              </div>
+            </div>
           </div>
-          <div id="sample-metadata" class="panel-body font-weight-bolder"></div>
-        </div>
+        </div>        
       </div>
-      <div class="col-5 shadow-lg p-4 mb-5 bg-white rounded">
-        <div id="bar"></div>
-      </div>
-      <div class="col-md-5 shadow-lg p-4 mb-5 bg-white rounded">
-        <div id="gauge"></div>
-      </div>
-    </div>
-    <div class="row">
-      <div class="col-md-12 shadow-lg p-4 mb-5 bg-white rounded">
-        <div id="bubble"></div>
-      </div>
-    </div>
+      <div class="col-12">
+        <div id="map"></div>
+      </div>      
   </div>
 
    <!-- D3 JavaScript -->
