--- a/templates/index.html
+++ b/templates/index.html
@@ -38,7 +38,7 @@
     </div>
     <!--row 2-->
     <div class="row row ml-5 mr-5">
-      <div class="col-2  border border-dark rounded-lg">        
+      <div class="col-2  border border-dark border-right-0 rounded-lg">        
         <div class="mt-4" style="font-weight:bold;">
           <h5 style="font-weight:bold;font-size:16px;">Select A Country</h5>
           <select id="selDataset" style="font-weight:bold;"></select>
@@ -56,7 +56,7 @@
           </div>
         </div>        
       </div>
-      <div class="col-12">
+      <div class="col-10 p-0 border border-dark rounded-lg">
         <div id="map"></div>
       </div>      
   </div>
