saving countries geojson and map.js

--- a/templates/index.html
+++ b/templates/index.html
@@ -66,12 +66,12 @@
    <!--Plotly.js -->
   <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
   <!-- Data file-->
-  <script src="static/data/samples.json"></script>  
+  <!-- <script src="static/data/samples.json"></script>   -->
   <!-- API key -->
   <script type="text/javascript" src="static/js/config.js"></script>
   <!--Our javaScript file-->
   <script src="static/js/launch.js"></script>
-  <!--<script src="./static/js/bonus.js"></script>-->
+  <script src="static/js/map.js"></script>
   
   
 </body>
