--- a/templates/index.html
+++ b/templates/index.html
@@ -61,6 +61,12 @@
       </div>      
   </div>
 
+
+    <!-- Leaflet JavaScript -->
+    <script src="https://unpkg.com/leaflet@1.3.3/dist/leaflet.js"
+    integrity="sha512-tAGcCfR4Sc5ZP5ZoVz0quoZDYX5aCtEm/eu1KhSLj2c9eFrylXZknQYmxUssFaVJKvvc0dJQixhGjG2yXWiV9Q=="
+    crossorigin=""></script>
+    
    <!-- D3 JavaScript -->
    <script src="https://d3js.org/d3.v5.min.js"></script>
    <!--Plotly.js -->
