--- a/templates/index.html
+++ b/templates/index.html
@@ -18,30 +18,31 @@
    crossorigin="" />
 
     <!-- Our CSS -->
-  <link rel="stylesheet" type="text/css" href="../static/css/style.css?version=1">
+  <link rel="stylesheet" type="text/css" href="/static/css/style.css">
 
 </head>
 
-<body style='background-color:black;'>
+<body class="bc_color-b">
 
-  <div class="container-fluid " style='background-color:white;'>
+  <div class="container-fluid bc_color-b">
     <!--row 1-->
-    <div class="row ml-5 mr-5 ">
-      <div class="col-xs-10 col-xs-10 col-sm-10 col-md-10 col-lg-10 col-xl-10 text-left" style='background-color:rgb(179, 178, 178);font-family:Times;'>
+    <div class="row ml-5 mr-5 bc_color-w">
+      <div class="col-xs-10 col-xs-10 col-sm-10 col-md-10 col-lg-10 col-xl-10 text-left" style='color:white;background-color:rgb(11, 47, 71);font-family:Times New Roman;'>
         <p class="pt-3 mb-0 font-italic set_font_size">Interactive climate Change Dashboard</p> 
       </div>
-      <div class="col-xs-2 col-xs-2 col-sm-2 col-md-2 col-lg-2 col-xl-2 text-left pr-0" style='background-color:rgb(179, 178, 178);'>
+      <div class="col-xs-2 col-xs-2 col-sm-2 col-md-2 col-lg-2 col-xl-2 text-left pr-0" style='color:white;background-color:rgb(11, 47, 71)'>
         <div class="pt-4">
-          <a href="#!" class="btn btn-primary active p-1 w-75  d-flex float-right float-bottom" style="line-height:1px;height:70px;" ><input class="w-100"  alt="Responsive image" type="image" src="static\Image\worldMap_button.png" /></a>
+        <a href="#!" class="btn btn-primary active p-1 w-75  d-flex float-right float-bottom" style="line-height:1px;height:70px;" ><input class="w-100"  alt="Responsive image" type="image" src="/static/Image/worldMap_button.png" /></a>
         </div>       
       </div>
     </div>
     <!--row 2-->
-    <div class="row row ml-5 mr-5">
+    <div class="row row ml-5 mr-5 bc_color-w">
       <div class="col-2  border border-dark border-right-0 rounded-lg">        
         <div class="mt-4" style="font-weight:bold;">
           <h5 style="font-weight:bold;font-size:16px;">Select A Country</h5>
-          <select id="selDataset" style="font-weight:bold;"></select>
+          <select id="selDataset" style="font-weight:bold;">
+          </select>
         </div>
         <div class="container-fluid">
           <div class="row">
@@ -61,17 +62,21 @@
       </div>      
   </div>
 
+   <!-- Leaflet JS -->
+   <script src="https://unpkg.com/leaflet@1.6.0/dist/leaflet.js"
+    integrity="sha512-gZwIG9x3wUXg2hdXF6+rVkLF/0Vi9U8D2Ntg4Ga5I5BZpVkVxlJWbSQtXPSiUTtC0TjtGOmxa1AJPuV0CPthew=="
+    crossorigin=""></script>
    <!-- D3 JavaScript -->
-   <script src="https://d3js.org/d3.v5.min.js"></script>
+   <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/5.5.0/d3.js"></script>
    <!--Plotly.js -->
   <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
   <!-- Data file-->
   <!-- <script src="static/data/samples.json"></script>   -->
   <!-- API key -->
-  <script type="text/javascript" src="static/js/config.js"></script>
+  <!-- <script type="text/javascript" src="static/js/config.js"></script> -->
   <!--Our javaScript file-->
-  <script src="static/js/launch.js"></script>
-  <script src="static/js/map.js"></script>
+  <script src="/static/js/launch.js"></script>
+  <!-- <script src="/static/js/map.js"></script> -->
   
   
 </body>
