--- a/templates/index.html
+++ b/templates/index.html
@@ -38,9 +38,9 @@
     </div>
     <!--row 2-->
     <div class="row row ml-5 mr-5 bc_color-w">
-      <div class="col-2  border border-dark border-right-0 rounded-lg">        
-        <div class="mt-4" style="font-weight:bold;">
-          <h5 style="font-weight:bold;font-size:13px;">Select A Country</h5>
+      <div class="col-2  border border-dark border-right-0 rounded-lg col-color">        
+        <div class="mt-5" style="font-weight:bold;">
+          <h5 style="font-weight:bold;font-size:13px;color:white;">Select A Country</h5>
           <select id="selDataset" class="dropdown">
           </select>
         </div>
@@ -49,7 +49,7 @@
             <div class="col-12 mt-5 p-0">
               <div class="panel panel-primary">
                 <div class="panel-heading">
-                  <h3 class="panel-title mt-5" style="font-weight:bold;font-size:16px;">Demographic Info</h3>
+                  <h3 class="panel-title mt-5" style="font-weight:bold;font-size:16px;color:white;">Demographic Info</h3>
                 </div>
                 <div id="demo-info" class="panel-body font-weight-bolder"></div>
               </div>
