--- a/templates/index.html
+++ b/templates/index.html
@@ -11,13 +11,15 @@
   <!--<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">-->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
   <!--<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>-->
-  
-   <!-- Leaflet CSS -->
-   <link rel="stylesheet" href="https://unpkg.com/leaflet@1.6.0/dist/leaflet.css"
-   integrity="sha512-xwE/Az9zrjBIphAcBb3F6JVqxf46+CDLwfLMHloNu6KEQCAWi6HcDUbeOfBIptF7tcCzusKFjFw2yuvEpDL9wQ=="
-   crossorigin="" />
 
-    <!-- Our CSS -->
+  <!-- Fonts from google -->
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Bungee+Inline&family=Bungee+Shade&family=Chathura:wght@800&family=Girassol&family=Karantina&family=Niconne&family=Odibee+Sans&family=Romanesco&display=swap" rel="stylesheet">
+  <!-- Leaflet CSS -->
+  <link rel="stylesheet" href="https://unpkg.com/leaflet@1.6.0/dist/leaflet.css"
+  integrity="sha512-xwE/Az9zrjBIphAcBb3F6JVqxf46+CDLwfLMHloNu6KEQCAWi6HcDUbeOfBIptF7tcCzusKFjFw2yuvEpDL9wQ=="
+  crossorigin="" />
+   <!-- Our CSS -->
   <link rel="stylesheet" type="text/css" href="/static/css/style.css">
 
 </head>
@@ -27,10 +29,10 @@
   <div class="container-fluid bc_color-b">
     <!--row 1-->
     <div class="row ml-5 mr-5 bc_color-w">
-      <div class="col-xs-10 col-xs-10 col-sm-10 col-md-10 col-lg-10 col-xl-10 text-left" style='color:white;background-color:rgb(11, 47, 71);font-family:Times New Roman;'>
+      <div class="col-xs-12 col-s-12 col-sm-10 col-md-10 col-lg-10 col-xl-10 text-left" style='color:white;background-color:rgb(11, 47, 71);font-family:Times New Roman;'>
         <p class="pt-3 mb-0 font-italic set_font_size">Interactive climate Change Dashboard</p> 
       </div>
-      <div class="col-xs-2 col-xs-2 col-sm-2 col-md-2 col-lg-2 col-xl-2 text-left pr-0" style='color:white;background-color:rgb(11, 47, 71)'>
+      <div class="col-xs-2 col-s-2 col-sm-2 col-md-2 col-lg-2 col-xl-2 text-left pr-0" style='color:white;background-color:rgb(11, 47, 71)'>
         <div class="pt-4">
         <a href="#!" class="btn btn-primary active p-1 w-75  d-flex float-right float-bottom" style="line-height:1px;height:70px;" ><input class="w-100"  alt="Responsive image" type="image" src="/static/Image/worldMap_button.png" /></a>
         </div>       
