--- a/templates/index.html
+++ b/templates/index.html
@@ -40,7 +40,7 @@
     </div>
     <!--row 2-->
     <div class="row row ml-5 mr-5 bc_color-w">
-      <div class="col-2  border border-dark border-right-0 rounded-lg col-color">        
+      <div class="col-2  border border-dark border-right-0 border-top-0 col-color">        
         <div class="mt-5" style="font-weight:bold;">
           <h5 style="font-weight:bold;font-size:13px;color:white;">Select A Country</h5>
           <select id="selDataset" class="dropdown">
