Jquery rendering chart elements

--- a/templates/index.html
+++ b/templates/index.html
@@ -63,7 +63,11 @@
         </div>        
       </div>
       <div class="col-10 p-0 border border-dark rounded-lg">
-        <div id="map" class="container-fluid"></div>
+        <div id="map" class="container-fluid">
+          <div id="leaf" class= "text-center"> 
+            <img class="w-50" src="http://2.bp.blogspot.com/-8P_iI3YueO0/T73feHn5VSI/AAAAAAAAAiw/N5N3HmVmk9I/s1600/6a00d834516a0869e2016760f339c3970b-800wi.jpg" alt="Big Smileys" />
+          </div>
+        </div>
       </div>      
   </div>
 
