--- a/templates/index.html
+++ b/templates/index.html
@@ -77,7 +77,7 @@
   <script type="text/javascript" src="static/js/config.js"></script>
   <!--Our javaScript file-->
   <script src="static/js/launch.js"></script>
-  <script src="static/js/map.js"></script>
+  <script src="static/js/new_map.js"></script>
   
   
 </body>
