saving map and index

--- a/templates/index.html
+++ b/templates/index.html
@@ -79,10 +79,15 @@
    <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/5.5.0/d3.js"></script>
    <!--Plotly.js -->
   <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
+  <!-- Data.js -->
+  <!-- <script src="/static/js/data.js/src/index.js"></script> -->
+
   <!-- Data file-->
+  <script src="/static/data/countries.geojson"></script>
   <script src="/static/js/JQueryRenderHTML.js"></script>
+
   <!-- API key -->
-  <!-- <script type="text/javascript" src="static/js/config.js"></script> -->
+  <script type="text/javascript" src="static/js/config.js"></script>
   <!--Our javaScript file-->
   <script src="static/js/launch.js"></script>
   <script src="static/js/new_map.js"></script>
