--- a/templates/index.html
+++ b/templates/index.html
@@ -86,6 +86,7 @@
   <!--Our javaScript file-->
   <script src="/static/js/launch.js"></script>
   <!-- <script src="/static/js/map.js"></script> -->
+  <script type="text/javascript" src="/static/js/JMRscatter.js"></script>
   
   
 </body>
