--- a/templates/index.html
+++ b/templates/index.html
@@ -32,31 +32,31 @@
   <div class="container-fluid bc_color-b">
     <!--row 1-->
     <div class="row ml-5 mr-5 bc_color-w">
-      <div class="col-xs-12 col-s-12 col-sm-10 col-md-10 col-lg-10 col-xl-10 text-left" style='color:white;background-color:rgb(11, 47, 71);font-family:Times New Roman;'>
+      <div class="col-xs-12 col-s-12 col-sm-10 col-md-10 col-lg-10 col-xl-10 text-left set-font" style='font-family:Times New Roman;'>
         <p class="pt-3 mb-0 font-italic set_font_size">Interactive climate Change Dashboard</p> 
       </div>
-      <div class="col-xs-2 col-s-2 col-sm-2 col-md-2 col-lg-2 col-xl-2 text-left pr-0" style='color:white;background-color:rgb(11, 47, 71)'>
+      <div class="col-xs-12 col-s-12 col-sm-2 col-md-2 col-lg-2 col-xl-2 text-left pr-0 set">
         <div class="pt-4">
-        <a href="#!" class="btn btn-primary active p-1 w-75  d-flex float-right float-bottom" style="line-height:1px;height:70px;" ><input class="w-100"  alt="Responsive image" type="image" src="/static/Image/worldMap_button.png" /></a>
+        <a href="#!" class="btn btn-primary active p-1  d-flex float-right float-bottom" style="line-height:1px;height:60px;width:100px;background-color:#023002;" ><input class="w-100"  alt="Responsive image" type="image" src="/static/Image/worldMap_button1.png" /></a>
         </div>       
       </div>
     </div>
     <!--row 2-->
     <div class="row row ml-5 mr-5 bc_color-w">
-      <div class="col-2  border border-dark border-right-0 border-top-0 col-color">        
-        <div class="mt-5" style="font-weight:bold;">
-          <h5 style="font-weight:bold;font-size:13px;color:white;">Select A Country</h5>
+      <div class="col-xs-12 col-s-12 col-md-2  border border-dark border-right-0 border-top-0 col-color">        
+        <div class="mt-5 set-font">
+          <h5 style="font-size:13px;">Select A Country</h5>
           <select id="selDataset" class=" selDataset dropdown">
           </select>
         </div>
         <div class="container-fluid">
           <div class="row">
-            <div class="col-12 mt-5 p-0">
+            <div class="col-xs-12 col-12 mt-5 p-0">
               <div class="panel panel-primary">
-                <div class="panel-heading">
-                  <h3 class="panel-title mt-5" style="font-weight:bold;font-size:16px;color:white;">Demographic Info</h3>
+                <div class="panel-heading ">
+                  <h3 class="panel-title mt-5 set-pad" style="font-size:17px;">Demographic Info</h3>
                 </div>
-                <div id="demo-info" class="panel-body font-weight-bolder"></div>
+                <div id="demo-info" class="panel-body font-weight-bolder "></div>
               </div>
             </div>
           </div>
