--- a/templates/index.html
+++ b/templates/index.html
@@ -79,7 +79,7 @@
    <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/5.5.0/d3.js"></script>
    <!--Plotly.js -->
   <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
-  <!-- Data file-->
+  <!-- JQuery  file-->
   <script src="/static/js/JQueryRenderHTML.js"></script>
   <!-- API key -->
   <!-- <script type="text/javascript" src="static/js/config.js"></script> -->
