--- a/templates/index.html
+++ b/templates/index.html
@@ -83,7 +83,7 @@
   <!-- <script src="/static/js/data.js/src/index.js"></script> -->
 
   <!-- Data file-->
-  <script src="/static/data/countries.geojson"></script>
+  <!-- <script src="static/data/ne_50m_admin_0_countries.geojson"></script> -->
   <script src="/static/js/JQueryRenderHTML.js"></script>
 
   <!-- API key -->
