--- a/templates/index.html
+++ b/templates/index.html
@@ -79,14 +79,27 @@
    <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/5.5.0/d3.js"></script>
    <!--Plotly.js -->
   <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
-  <!-- JQuery  file-->
-  <script src="/static/js/JQueryRenderHTML.js"></script>
+
   <!-- API key -->
   <!-- <script type="text/javascript" src="static/js/config.js"></script> -->
+
+
   <!--Our javaScript file-->
+  <!---------------------------------------------->
+  <!-- Launge Page -->
   <script src="/static/js/launch.js"></script>
+
+  <!--Build Map -->
   <!-- <script src="/static/js/map.js"></script> -->
+
+  <!-- Buld Scatter Plot -->
   <script type="text/javascript" src="/static/js/JMRscatter.js"></script>
+
+  <!-- JQuery file to render DOM elements-->
+  <script src="/static/js/JQueryRenderHTML.js"></script>
+  
+  <!-- Build Warming Strips Chart-->
+  <script src="/static/js/stripe_chart.js"></script>
   
   
 </body>
