--- a/templates/index.html
+++ b/templates/index.html
@@ -31,11 +31,11 @@
 
   <div class="container-fluid bc_color-b">
     <!--row 1-->
-    <div class="row ml-5 mr-5 bc_color-w">
-      <div class="col-xs-12 col-s-12 col-sm-10 col-md-10 col-lg-10 col-xl-10 text-left set-font" style='font-family:Times New Roman;'>
+    <div class="row ml-5 mr-5 col-color">
+      <div class="col-xs-12 col-s-12 col-sm-10 col-md-10 col-lg-10 col-xl-10 text-left col-color" style='font-family:Times New Roman;'>
         <p class="pt-3 mb-0 font-italic set_font_size">Interactive climate Change Dashboard</p> 
       </div>
-      <div class="col-xs-12 col-s-12 col-sm-2 col-md-2 col-lg-2 col-xl-2 text-left pr-0 set">
+      <div class="col-xs-12 col-s-12 col-sm-2 col-md-2 col-lg-2 col-xl-2 text-left pr-0 ">
         <div class="pt-4">
         <a href="#!" class="btn btn-primary active p-1  d-flex float-right float-bottom" style="line-height:1px;height:60px;width:100px;background-color:#023002;" ><input class="w-100"  alt="Responsive image" type="image" src="/static/Image/worldMap_button1.png" /></a>
         </div>       
@@ -44,7 +44,7 @@
     <!--row 2-->
     <div class="row row ml-5 mr-5 bc_color-w">
       <div class="col-xs-12 col-s-12 col-md-2  border border-dark border-right-0 border-top-0 col-color">        
-        <div class="mt-5 set-font">
+        <div class="mt-5 col-color">
           <h5 style="font-size:13px;">Select A Country</h5>
           <select id="selDataset" class=" selDataset dropdown">
           </select>
@@ -97,7 +97,7 @@
 
   <!-- JQuery file to render DOM elements-->
   <script src="/static/js/JQueryRenderHTML.js"></script>
-  
+
   <!-- Build Warming Strips Chart-->
   <script src="/static/js/stripe_chart.js"></script>
   
