--- a/templates/index.html
+++ b/templates/index.html
@@ -100,6 +100,9 @@
 
   <!-- Build Warming Strips Chart-->
   <script src="/static/js/stripe_chart.js"></script>
+
+    <!-- Build Pie Chart Chart-->
+    <script src="/static/js/pieChart.js"></script>
   
   
 </body>
