saving map and new cloneLayer leaflet package

--- a/templates/index.html
+++ b/templates/index.html
@@ -104,7 +104,7 @@
   <script src="/static/js/JQueryRenderHTML.js"></script>
 
   <!-- Build Warming Strips Chart-->
-  <script src="/static/js/stripe_chart.js"></script>
+  <!-- <script src="/static/js/stripe_chart.js"></script> -->
   
   
 </body>
