--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,10 +1,19 @@
 body {
     width:100%;
     height:100%;
+    padding: 0;
+    margin: 0;
+}
+
+  
+#map,
+body,
+html {
+  height: 100%;
 }
 
 .bc_color-b {
-    background-color:rgb(255, 255, 255);
+    background-color:rgb(8, 8, 8);
 }
 .bc_color-w{
     background-color:rgb(234, 237, 241);
@@ -12,6 +21,7 @@ body {
 
 .col-color {
     background-color:rgb(11,47,71);
+    color:white;
 }
 .set_font_size{
     word-wrap: break-word;
@@ -49,15 +59,22 @@ body {
 .pie_text {
     text-anchor: middle;
     font-size:22px;
-    font-family:Karantina;
+    /* font-family:Karantina; */
     /* font-family:Girassol; */
-    /* font-family:Niconne; */
+    font-family:Niconne;
     
-
-    
-
-
 }
+.aText {
+   /* font-family:Karantina; */
+    font-family:Girassol;
+    font-size: 13px;
+    text-anchor: middle;
+    font-weight: bold;
+  }
+    
+
+
+
 
 
 /*When your screen as less than 768px*/
@@ -68,16 +85,11 @@ body {
     #selDataset {
         width:10vw !important;
     }
+    .aText {
+        
+        font-size: 13px;
+        
+      }
 
 }
 
-body {
-    padding: 0;
-    margin: 0;
-  }
-  
-  #map,
-  body,
-  html {
-    height: 100%;
-  }
