--- a/templates/index.html
+++ b/templates/index.html
@@ -65,7 +65,6 @@
       <div class="col-10 p-0 border border-dark rounded-lg">
         <div id="map" class="container-fluid">
           <div id="leaf" class= "text-center"> 
-            <img class="w-50" src="http://2.bp.blogspot.com/-8P_iI3YueO0/T73feHn5VSI/AAAAAAAAAiw/N5N3HmVmk9I/s1600/6a00d834516a0869e2016760f339c3970b-800wi.jpg" alt="Big Smileys" />
           </div>
         </div>
       </div>      
@@ -94,11 +93,11 @@
   <!-- Launch Page -->
   <script src="/static/js/launch.js"></script>
 
-  <!--Build Map -->
-  <script src="/static/js/map.js"></script>
+  <!-- Build Map-->
+  <!-- <script src="/static/js/map.js"></script>  -->
 
   <!-- Buld Scatter Plot -->
-  <script type="text/javascript" src="/static/js/JMRscatter.js"></script>
+  <!-- <script type="text/javascript" src="/static/js/JMRscatter.js"></script> -->
 
   <!-- JQuery file to render DOM elements-->
   <script src="/static/js/JQueryRenderHTML.js"></script>
