--- a/static/css/style.css
+++ b/static/css/style.css
@@ -10,6 +10,17 @@ body {
 body,
 html {
   height: 100%;
+  width: 100%
+}
+
+#map {
+  /* height: 850px; */
+  width: 100%;
+  position: relative;
+}
+
+.map-background {
+    opacity: 0.0;
 }
 
 .bc_color-b {
@@ -134,6 +145,10 @@ html {
         font-size: 13px;
         
       }
-
+      #country {
+        height: 100vh;
+        width: 100vw;
+        position: relative;
+      }
 }
 
