saving maps and md file with changes

--- a/templates/index.html
+++ b/templates/index.html
@@ -65,6 +65,8 @@
       <div class="col-10 p-0 border border-dark rounded-lg">
         <div id="map" class="container-fluid">
             <div id="leaf" class = "leafletmap">
+            <!-- <img class="w-50 map-background" src="" alt="Big Smileys" /> -->
+
             <img class="w-50 map-background" src="http://2.bp.blogspot.com/-8P_iI3YueO0/T73feHn5VSI/AAAAAAAAAiw/N5N3HmVmk9I/s1600/6a00d834516a0869e2016760f339c3970b-800wi.jpg" alt="Big Smileys" />
             </div>
         </div>
@@ -111,7 +113,10 @@
   <script src="/static/js/stripe_chart.js"></script>
 
     <!-- Build Pie Chart Chart-->
-    <script src="/static/js/pieChart.js"></script>
+    <!-- <script src="/static/js/pieChart.js"></script> -->
+
+    <!-- minimap js -->
+    <script src="/static/js/mimMap.js"></script>
   
   
 </body>
