--- a/static/css/style.css
+++ b/static/css/style.css
@@ -129,7 +129,29 @@ html {
 }
 
 
+.stats {
+    padding: 10px;
+    font-family: 'Segoe UI', sans-serif;
+    font-size: 14px;
+    /* font-weight: bold; */
+    line-height: 18px;
+    color: #555;
+    background-color: white;
+    border-radius: 5px;
+    box-shadow: 0 0 15px rgba(0, 0, 0, 0.2);
+  }
 
+  .legend {
+    padding: 10px;
+    font-family: 'Segoe UI', sans-serif;
+    font-size: 14px;
+    /* font-weight: bold; */
+    line-height: 18px;
+    color: #555;
+    background-color: white;
+    border-radius: 5px;
+    box-shadow: 0 0 15px rgba(0, 0, 0, 0.2);
+  }
 
 
 /*When your screen as less than 768px*/
