--- a/templates/index.html
+++ b/templates/index.html
@@ -33,11 +33,11 @@
     <!--row 1-->
     <div class="row ml-5 mr-5 col-color">
       <div class="col-xs-12 col-s-12 col-sm-10 col-md-10 col-lg-10 col-xl-10 text-left col-color" style='font-family:Times New Roman;'>
-        <p class="pt-3 mb-0 font-italic set_font_size">Interactive climate Change Dashboard</p> 
+        <p class="pt-3 mb-0 font-italic set_font_size">Interactive Climate Change Dashboard</p> 
       </div>
       <div class="col-xs-12 col-s-12 col-sm-2 col-md-2 col-lg-2 col-xl-2 text-left pr-0 ">
         <div class="pt-4">
-        <a href="#!" class="btn btn-primary active p-1  d-flex float-right float-bottom" style="line-height:1px;height:60px;width:100px;background-color:#023002;" ><input class="w-100"  alt="Responsive image" type="image" src="/static/Image/worldMap_button1.png" /></a>
+        <a href="/" class="btn btn-primary active p-1  d-flex float-right float-bottom" style="line-height:1px;height:60px;width:100px;background-color:#023002;" ><input class="w-100"  alt="Responsive image" type="image" src="/static/Image/worldMap_button1.png" /></a>
         </div>       
       </div>
     </div>
